weather-app-eap-cloud-ready/src/main/jkube/raw/grafana-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ose-grafana
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: ose-grafana
  template:
    metadata:
      labels:
        deployment: ose-grafana
    spec:
      volumes:
        - name: volume-grafana-prometheus-datasource
          configMap:
            name: grafana
            items:
              - key: datasource-prometheus.yaml
                path: datasource-prometheus.yaml
            defaultMode: 420
        - name: volume-dashboard
          configMap:
            name: grafana
            items:
              - key: grafana-dashboard.yaml
                path: grafana-dashboard.yaml
            defaultMode: 420
        - name: volume-eap-dashboard
          configMap:
            name: grafana
            items:
              - key: jboss_eap_grafana_dashboard.json
                path: jboss_eap_grafana_dashboard.json
            defaultMode: 420
      containers:
        - name: ose-grafana
          image: registry.redhat.io/openshift4/ose-grafana
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: volume-grafana-prometheus-datasource
              mountPath: /etc/grafana/provisioning/datasources
            - name: volume-dashboard
              mountPath: /etc/grafana/provisioning/dashboards
            - name: volume-eap-dashboard
              mountPath: /var/lib/grafana/dashboards
