weather-app-eap-cloud-ready/src/main/jkube/raw/jaeger-all-in-one-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jaeger-all-in-one-rhel8
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: jaeger-all-in-one-rhel8
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: jaeger-all-in-one-rhel8
  template:
    metadata:
      labels:
        deployment: jaeger-all-in-one-rhel8
    spec:
      volumes:
        - name: jaeger-all-in-one-rhel8-volume-1
          emptyDir: {}
      containers:
        - name: jaeger-all-in-one-rhel8
          image: >-
            registry.redhat.io/distributed-tracing/jaeger-all-in-one-rhel8:1.24.1-1
          ports:
            - containerPort: 14268
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 5775
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 14250
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: jaeger-all-in-one-rhel8-volume-1
              mountPath: /tmp
