weather-app-eap-cloud-ready/src/main/jkube/raw/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ose-grafana
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-grafana
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    deployment: ose-grafana
