weather-app-eap-cloud-ready/src/main/jkube/raw/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ose-prometheus
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-prometheus
spec:
  ports:
    - name: 9090-tcp
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    deployment: ose-prometheus
