weather-app-eap-cloud-ready/src/main/jkube/raw/grafana-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ose-grafana
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-grafana
spec:
  to:
    kind: Service
    name: ose-grafana
  port:
    targetPort: 3000-tcp
