weather-app-eap-cloud-ready/src/main/jkube/raw/jaeger-all-in-one-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jaeger-all-in-one-rhel8
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: jaeger-all-in-one-rhel8
spec:
  to:
    kind: Service
    name: jaeger-all-in-one-rhel8
  port:
    targetPort: 16686
