weather-app-eap-cloud-ready/src/main/jkube/raw/prometheus-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ose-prometheus
  namespace: redhat-jboss-eap-cloud-ready-demo
spec:
  to:
    kind: Service
    name: ose-prometheus
  port:
    targetPort: 9090-tcp
